--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>khatir</title>
+    <title>Swatted.it | run u</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Add this in the <head> section of your HTML -->
@@ -11,7 +11,7 @@
 
     <!-- Then in your body where you want the CAPTCHA to appear, add this before your content -->
     <div class="captcha-container">
-      <div class="cf-turnstile" data-sitekey="0x4AAAAAABdrwaLA4F_fo6jm" data-callback="captchaCallback"></div>
+      <div class="cf-turnstile" data-sitekey="0x4AAAAAABdr98Y8IknNIBMo" data-callback="captchaCallback"></div>
     </div>
 </head>
 <body>
